# opentelemetry-cpp

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  SETUP.md  all_api_includes.cc  all_sdk_includes.cc  dll_deps.bzl  dll_deps_generated.bzl  dll_deps_generated_windows.bzl  dll_deps_update.cc  dwyu.bzl  multitool.lock.json  otel_sdk_build.cmd
.devcontainer/: Dockerfile.conan
.github/workflows/: benchmark.yml  ci.yml  clang-tidy.yaml  cmake_install.yml  codeql-analysis.yml  cppcheck.yml  dependencies_image.yml  fossa.yml  iwyu.yml  ossf-scorecard.yml  otel_sdk.yml  project_management_comment.yml
api/: BUILD
api/include/opentelemetry/: version.h
api/test/baggage/: baggage_benchmark.cc
api/test/common/: spinlock_benchmark.cc  string_util_test.cc
api/test/context/: context_test.cc
api/test/core/: timestamp_test.cc
api/test/logs/: logger_benchmark.cc  logger_test.cc  provider_test.cc
api/test/metrics/: meter_provider_test.cc  noop_sync_instrument_test.cc
api/test/nostd/: span_test.cc  string_view_test.cc
api/test/singleton/: singleton_test.cc
api/test/trace/: BUILD  key_value_iterable_view_test.cc  noop_test.cc  provider_test.cc  span_benchmark.cc  span_id_benchmark.cc  trace_state_test.cc
bazel/: curl.patch  grpc.patch  otel_cc.bzl  otel_cc_benchmark.bzl  prometheus-cpp.patch
docker/ubuntuLatest/: Dockerfile
docs/: google-test.md
examples/common/metrics_foo_library/: foo_library.cc
examples/configuration/: BUILD  custom_log_record_exporter.cc  custom_log_record_exporter.h  custom_log_record_exporter_builder.cc  custom_log_record_exporter_builder.h  custom_log_record_processor.cc  custom_log_record_processor.h  custom_log_record_processor_builder.cc  custom_log_record_processor_builder.h  custom_pull_metric_exporter.cc  custom_pull_metric_exporter.h  custom_pull_metric_exporter_builder.cc  custom_pull_metric_exporter_builder.h  custom_push_metric_exporter.cc  custom_push_metric_exporter.h  custom_push_metric_exporter_builder.cc  custom_push_metric_exporter_builder.h  custom_sampler.cc  custom_sampler.h  custom_sampler_builder.cc  custom_sampler_builder.h  custom_span_exporter.cc  custom_span_exporter.h  custom_span_exporter_builder.cc  custom_span_exporter_builder.h  custom_span_processor.cc  custom_span_processor.h  custom_span_processor_builder.cc  custom_span_processor_builder.h  main.cc
examples/explicit_parent/: BUILD
examples/grpc/: client.cc  server.cc
examples/http/: server.cc
examples/metrics_simple/: metrics_ostream.cc
examples/multithreaded/: main.cc
examples/otlp/: grpc_log_main.cc  grpc_main.cc  grpc_metric_main.cc  http_log_main.cc  http_main.cc  http_metric_main.cc
examples/prometheus/: main.cc
examples/simple/: main.cc
examples/zipkin/: main.cc
exporters/elasticsearch/: BUILD
exporters/elasticsearch/src/: es_log_record_exporter.cc  es_log_recordable.cc
exporters/elasticsearch/test/: es_log_record_exporter_test.cc
exporters/etw/: BUILD
exporters/etw/test/: etw_provider_test.cc
exporters/memory/: BUILD
exporters/memory/test/: in_memory_metric_data_test.cc  in_memory_span_data_test.cc  in_memory_span_exporter_test.cc
exporters/ostream/: BUILD
exporters/ostream/src/: console_log_record_builder.cc  console_span_builder.cc  log_record_exporter.cc  metric_exporter.cc  span_exporter.cc
exporters/ostream/test/: ostream_log_test.cc
exporters/otlp/: BUILD
exporters/otlp/src/: otlp_environment.cc  otlp_file_client.cc  otlp_file_exporter.cc  otlp_file_exporter_factory.cc  otlp_file_log_record_builder.cc  otlp_file_log_record_exporter.cc  otlp_file_log_record_exporter_factory.cc  otlp_file_metric_exporter.cc  otlp_file_metric_exporter_factory.cc  otlp_file_span_builder.cc  otlp_grpc_client.cc  otlp_grpc_exporter.cc  otlp_grpc_exporter_factory.cc  otlp_grpc_forward_proxy.cc  otlp_grpc_log_record_exporter.cc  otlp_grpc_log_record_exporter_factory.cc  otlp_grpc_metric_exporter.cc  otlp_grpc_metric_exporter_factory.cc  otlp_grpc_metric_exporter_options.cc  otlp_http_client.cc  otlp_http_exporter.cc  otlp_http_exporter_options.cc  otlp_http_log_record_exporter.cc  otlp_http_log_record_exporter_options.cc  otlp_http_metric_exporter.cc  otlp_http_metric_exporter_options.cc  otlp_log_recordable.cc  otlp_metric_utils.cc  otlp_populate_attribute_utils.cc  otlp_recordable.cc  otlp_recordable_utils.cc
exporters/otlp/test/: otlp_file_client_test.cc  otlp_file_exporter_test.cc  otlp_file_log_record_exporter_test.cc  otlp_file_metric_exporter_test.cc  otlp_grpc_exporter_benchmark.cc  otlp_grpc_exporter_test.cc  otlp_grpc_log_record_exporter_test.cc  otlp_grpc_metric_exporter_test.cc  otlp_grpc_target_test.cc  otlp_http_exporter_test.cc  otlp_http_log_record_exporter_test.cc  otlp_http_metric_exporter_test.cc  otlp_log_recordable_test.cc  otlp_metrics_serialization_test.cc  otlp_recordable_test.cc
exporters/prometheus/: BUILD
exporters/prometheus/src/: collector.cc  exporter.cc  exporter_options.cc  exporter_utils.cc
exporters/prometheus/test/: collector_test.cc  exporter_utils_test.cc  prometheus_test_helper.h
exporters/zipkin/: BUILD
exporters/zipkin/src/: recordable.cc  zipkin_exporter.cc  zipkin_exporter_factory.cc
ext/: BUILD
ext/test/http/: BUILD  (+1 more)
functional/otlp/: Dockerfile  func_grpc_main.cc  func_http_main.cc
opentracing-shim/src/: shim_utils.cc  span_context_shim.cc  span_shim.cc  tracer_shim.cc
opentracing-shim/test/: tracer_shim_test.cc
otel_sdk/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  m.cpp  metrics1.json  metrics1.telemetry.json  multitool.lock.json  otelcol.yaml  otelcol2.yaml  otelcol2_org.yaml  otelcol3.yaml  s.cpp  t.cpp
resource_detectors/: BUILD
resource_detectors/src/: container_detector.cc  process_detector.cc  process_detector_utils.cc
resource_detectors/test/: BUILD  container_detector_test.cc
x/: .bazelrc  BUILD.bazel  MODULE.bazel  m.cpp  otel_sdk_build.cmd
x/bazel/: grpc.patch  protobuf.patch
x/hang/: BUILD.bazel
x/haydoggo/: BUILD.bazel
x/issue_3611/: BUILD.bazel  test.cpp
x/rsomla1/: BUILD.bazel
(+388 files in other folders)
