module(
    name = "otel_sdk",
    version = "1.26.0-dev",
    compatibility_level = 0,
)

bazel_dep(name = "abseil-cpp", version = "20250814.2")
bazel_dep(name = "bazel_lib", version = "3.2.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boringssl", version = "0.20251124.0")
single_version_override(
    module_name = "boringssl",
    patch_strip = 1,
    patches = [
        "bazel/boringssl.patch",
    ],
    version = "0.20251124.0",
)

bazel_dep(name = "rapidyaml", version = "0.10.0")
bazel_dep(name = "curl", version = "8.11.0.bcr.4")
single_version_override(
    module_name = "curl",
    patch_strip = 1,
    patches = [
        "bazel/curl.patch",
    ],
    version = "8.11.0.bcr.4",
)

bazel_dep(name = "depend_on_what_you_use", version = "0.13.0")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "stardoc", version = "0.8.1")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "grpc", version = "1.78.0")
single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        "bazel/grpc.patch",
    ],
    version = "1.78.0",
)
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "1.8.4")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")
bazel_dep(name = "opentracing-cpp", version = "1.6.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "protoc-gen-validate", version = "1.3.0")
bazel_dep(name = "c-ares", version = "1.34.5.bcr.3")
archive_override(
    module_name = "c-ares",
    integrity = "sha256-QItVHP1adgblywbel9M7cgFSehKhzHO6CrVe8/ynEls=",
    strip_prefix = "c-ares-1.34.5-bazel",
    urls = ["https://github.com/malkia/c-ares/archive/refs/tags/v1.34.5-bazel.tar.gz"],
)

bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "opentelemetry-proto", version = "1.8.0")
bazel_dep(name = "prometheus-cpp", version = "1.3.0.bcr.2")
bazel_dep(name = "civetweb", version = "1.16.bcr.3")

use_repo(
    use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension"),
    "local_config_cc",
)

bazel_dep(name = "cel-spec", version = "0.25.1")
bazel_dep(name = "envoy_api", version = "0.0.0-20251216-6ef568c")

# This is needed only for most of the `bazel mod xxx` functions to work.
#
# Otherwise it complaints with
#
# ERROR: in tag at https://bcr.bazel.build/modules/grpc-java/1.62.2/MODULE.bazel:89:15: no repository visible as
#        '@com_google_protobuf_javalite' to the repository '@@grpc-java+', but referenced by label
#        '@com_google_protobuf_javalite//:protobuf_javalite' in attribute 'target' of tag 'override'.
#      Is the module 'grpc-java' missing a bazel_dep or use_repo(..., "com_google_protobuf_javalite")?.
#
bazel_dep(name = "grpc-java", version = "1.78.0")

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "llvm_windows_install",
    build_file = "@otel_sdk//bazel:llvm_windows_install.BUILD",
    path = "C:/Program Files/LLVM",
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "@otel_sdk//:multitool.lock.json")
use_repo(multitool, "multitool")
