load("@rules_cc//cc:defs.bzl", "cc_import", "cc_test")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "r",
    values = {"compilation_mode": "opt"},
)

config_setting(
    name = "d",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "rd",
    values = {"compilation_mode": "fastbuild"},
)

platform(
    name = "x64_windows-msvc",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@rules_cc//cc/private/toolchain:msvc",
    ],
)

[cc_import(
    name = "otel_sdk_{}".format(opt),
    hdrs = glob(["include/**"]),
    interface_library = "{}lib/otel_sdk_{}.if.lib".format(dir,opt),
    strip_include_prefix = "include",
    data = ["{}bin/otel_sdk_{}.pdb".format(dir,opt)],
    shared_library = "{}bin/otel_sdk_{}.dll".format(dir,opt),
) for (opt,dir) in [("r",""),("d","debug/"),("rd","reldeb/")]]

alias(
    name = "otel_sdk",
    actual = select({
        "r": "otel_sdk_r",
        "d": "otel_sdk_d",
        "rd": "otel_sdk_rd",
    })
)

cc_test(
    name = "t",
    deps = ["otel_sdk"],
    srcs = ["t.cpp"],
)
