load("@rules_cc//cc:defs.bzl", "cc_import", "cc_test", "cc_binary")

package(default_visibility = ["//visibility:public"])

VERSION = "1.27.0"

config_setting(
    name = "r",
    values = {"compilation_mode": "opt"},
)

config_setting(
    name = "d",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "rd",
    values = {"compilation_mode": "fastbuild"},
)

# We don't compile otel_sdk for arm64 (Windows) hence force x64 which works through emulation
platform(
    name = "x64_windows",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

[cc_import(
    name = "otel_sdk_{}".format(opt),
    hdrs = glob(["{}/include/**".format(VERSION)]),
    interface_library = "{}/{}lib/otel_sdk_{}.if.lib".format(VERSION,dir,opt),
    strip_include_prefix = "{}/include".format(VERSION),
    data = ["{}/{}bin/otel_sdk_{}.pdb".format(VERSION,dir,opt)],
    shared_library = "{}/{}bin/otel_sdk_{}.dll".format(VERSION,dir,opt),
) for (opt,dir) in [("r",""),("d","debug/"),("rd","reldeb/")]]

alias(
    name = "otel_sdk",
    actual = select({
        "r": "otel_sdk_r",
        "d": "otel_sdk_d",
        "rd": "otel_sdk_rd",
    })
)

cc_test(
    name = "t",
    env = {
        "OTEL_EXPORTER_OTLP_ENDPOINT" : "http://127.0.0.1:43170",
    },
    deps = ["otel_sdk"],
    srcs = ["t.cpp"],
)

cc_test(
    name = "s",
    srcs = ["s.cpp"],
    data = [
        "@multitool//tools/otelcol-contrib",
        "otelcol.yaml",
        "t",
    ],
    args = [
       "$(rootpath @multitool//tools/otelcol-contrib)",
       "$(rootpath otelcol.yaml)",
       "$(rootpath t)",
    ],
    deps = [
        "@reproc//:reproc++", 
        "@bazel_tools//tools/cpp/runfiles"
    ],
)

cc_test(
    name = "s2",
    srcs = ["s.cpp"],
    data = [
        "@multitool//tools/otelcol-contrib",
        "otelcol2.yaml",
        "t",
    ],
    args = [
       "$(rootpath @multitool//tools/otelcol-contrib)",
       "$(rootpath otelcol2.yaml)",
       "5",
    ],
    deps = [
        "@reproc//:reproc++", 
        "@bazel_tools//tools/cpp/runfiles"
    ],
)
