#load("@bazel_lib//lib:expand_template.bzl", "expand_template")
load("@rules_cc//cc:defs.bzl", "cc_import", "cc_test", "cc_binary")

package(default_visibility = ["//visibility:public"])

VERSION = "1.29.0"

config_setting(
    name = "r",
    values = {"compilation_mode": "opt"},
)

config_setting(
    name = "d",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "rd",
    values = {"compilation_mode": "fastbuild"},
)

# We don't compile otel_sdk for arm64 (Windows) hence force x64 which works through emulation
platform(
    name = "x64_windows",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

[cc_import(
    name = "otel_sdk_{}".format(opt),
    hdrs = glob(["{}/include/**".format(VERSION)]),
    interface_library = "{}/{}lib/otel_sdk_{}.if.lib".format(VERSION,dir,opt),
    strip_include_prefix = "{}/include".format(VERSION),
    data = ["{}/{}bin/otel_sdk_{}.pdb".format(VERSION,dir,opt)],
    shared_library = "{}/{}bin/otel_sdk_{}.dll".format(VERSION,dir,opt),
) for (opt,dir) in [("r",""),("d","debug/"),("rd","reldeb/")]]

alias(
    name = "otel_sdk",
    actual = select({
        "r": "otel_sdk_r",
        "d": "otel_sdk_d",
        "rd": "otel_sdk_rd",
    })
)

cc_test(
    name = "t",
    env = {
        "OTEL_EXPORTER_OTLP_ENDPOINT" : "http://127.0.0.1:43170",
    },
    deps = ["otel_sdk"],
    srcs = ["t.cpp"],
)

cc_test(
    name = "m1",
    srcs = ["m.cpp"],
    data = [
        "@multitool//tools/otelcol-contrib",
        "@multitool//tools/prometheus",
        "@multitool//tools/aspire",
        "otelcol.yaml",
        "prometheus.yaml",
        "t",
    ],
    args = [
       "--aspire_binary=$(rootpath @multitool//tools/aspire)",
       "--otelcol_binary=$(rootpath @multitool//tools/otelcol-contrib)",
       "--otelcol_yaml=$(rootpath otelcol.yaml)",
       "--prometheus_binary=$(rootpath @multitool//tools/prometheus)",
       "--prometheus_yaml=$(rootpath prometheus.yaml)",
       "--test_binary=$(rootpath t)",
       "--sleep=10",
       "--generate",
    ],
    env = {
        "ASPNETCORE_ENVIRONMENT": "Development",
        "DOTNET_ENVIRONMENT": "Development",
        "DASHBOARD__TELEMETRYLIMITS__MAXLOGCOUNT": "50000",
        "DASHBOARD__TELEMETRYLIMITS__MAXTRACECOUNT": "50000",
        "DASHBOARD__TELEMETRYLIMITS__MAXMETRICSCOUNT": "50000",
        "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "http://127.0.0.1:43170",
        "ASPIRE_DASHBOARD_OTLP_HTTP_ENDPOINT_URL": "http://127.0.0.1:43171",
    },
    deps = [
        "@tinyproc", 
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
)

cc_test(
    name = "m2",
    srcs = ["m.cpp"],
    data = [
        "@multitool//tools/otelcol-contrib",
        "otelcol2.yaml",
        "t",
    ],
    args = [
       "--otelcol_binary=$(rootpath @multitool//tools/otelcol-contrib)",
       "--otelcol_yaml=$(rootpath otelcol2.yaml)",
       "--sleep=8",
    ],
    deps = [
        "@tinyproc", 
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
)

cc_test(
    name = "m3",
    srcs = ["m.cpp"],
    data = [
        "@multitool//tools/otelcol-contrib",
        "otelcol3.yaml",
        "t",
    ],
    args = [
       "--otelcol_binary=$(rootpath @multitool//tools/otelcol-contrib)",
       "--otelcol_yaml=$(rootpath otelcol3.yaml)",
       "--test_binary=$(rootpath t)",
    ],
    deps = [
        "@tinyproc", 
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
)
