module(name = "otel_sdk")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "reproc", version = "14.2.5")
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "@otel_sdk//:multitool.lock.json")
use_repo(multitool, "multitool")
